CH added comments to ch1 and 2 of CS paper

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -11,15 +11,13 @@ In this section, we provide an overview of methods used to develop LRPs for our 
 
 We consider two types of LRPs based on two different metrics:
 
-1) Proportion-based LRPs, which are based on the proportion of CUs within an SMU that are assessed as being above 'poor' status. We assume that in order for an SMU to remain above its proportion-based LRP, 100% of CUs must have status estimates above poor. 
+1) Proportion-based LRPs, which are based on the proportion of CUs within an SMU that are assessed as being above 'poor' status. We assume that in order for an SMU to remain above its proportion-based LRP, 100% of CUs must have status estimates above poor. <!--CH: I see "poor" is used consistently in this chapter, and is defined the paragraph below. However, I've used "red status" in the Guidelines paper as poor can be ambiguous at times. I just worry about introducing a new term, 'poor', into the lexicon for salmon assessments, with many opportunities for misinterpretation. Perhaps it's okay to say 'red status', as long as we're clear than lower benchmark is a proxy for red status when WSP assessments or the rapid multidimensional scanner tool is not possible/available?-->
 
 2) Aggregate abundance-based LRPs, which are based on total SMU-level spawning abundance. 
 
 While aggregate abundance-based LRPs are consistent with what is typically used for marine fish species, proportion-based LRPs have been proposed for Pacific salmon to align with DFO's Wild Salmon Policy. 
 
 When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above poor status. We use two different methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review). While aggregate-abundance based LRPs can be used as part of, or to inform harvest control rules for fisheries management, more complex harvest control rules that include for example, time-area closures to limit CU-specific harvests may better achieve the underlying objective of maintaining CU statuses above red (as described in Holt et al. (in review))
-
-<!--CH: In the Guidelines paper, I would like to add text that aggregate-abundance based LRPs may not need to be identified explicitly for harvest management, if HCRs are identified and evaluated to have a low probability of CUs being red. We might want to pull this thread through the Introduction of the case study paper or better yet here in Ch2 here when abundance-based LRPs are mentioned. I will include similar, but expanded text in the Guidelines paper, referring to the Groundfish MP Framework) --> 
 
 The above definitions hinge on what defines 'poor' CU status. In the case of WSP status assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone [@dfoCanadaPolicyConservation2005; @grant2017FraserSockeye2020]. While WSP assessments are typically intensive expert-driven processes, we demonstrate the application of a rapid multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (Pestal et al., in prep). When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on spawning abundance relative to a single lower benchmark that has been identified as important by local experts. While the rapid multidimensional scanning tool better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric relative to a lower benchmark to demonstrate how in many cases the rapid multidimensional scanning tool reduces to this metric. Exceptions are described in the application to case studies. A variety of methods are available for estimating lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). 
 
@@ -37,7 +35,7 @@ A proportion-based LRP is simply the proportion of CUs required to be assessed a
 
 We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent WSP status assessment above the red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent rapid multidimensional status assessment above red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., $S_{gen}$, percentile-based benchmarks, etc.). While we recommend applying methods (i) or (ii), approach (iii) is shown for comparison purposes to demonstrate consistency between rapid multidimensional status assessments and statuses derived from abundances relative to lower benchmarks.
 
-When assessing CU status relative to a single abundance-based lower benchmark in approach (iii), we use generational mean spawner abundances as a basis for determining whether each CU is above or below its lower benchmark. This approach reduces noise in annual CU status determination due to annual fluctuations in CU abundances. It also makes our determination of CU status consistent with the approach taken for abundance-based benchmarks in WSP assessments and the rapid multidimensional scanning tool.   
+When assessing CU status relative to a single abundance-based lower benchmark in approach (iii), we use generational mean spawner abundances as a basis for determining whether each CU is above or below its lower benchmark. Generational smoothing integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks. <!--CH: I added the previous sentence, okay?-->This approach reduces noise in annual CU status determination due to annual fluctuations in CU abundances from any single cohort. It also makes our determination of CU status consistent with the approach taken for abundance-based benchmarks in WSP assessments and the rapid multidimensional scanning tool. <!--CH suggestion: "Generational smoothing introduces autocorrelation into annual status, where status in a given year depends on the status in the previous year." This sets us up for why we don't use it below for aggregate-abundance based LRPs-->
 
 
 ### Rapid Multidimensional Scanning Tool{#rapidToolMethods}
@@ -72,18 +70,21 @@ The rapid multi-dimensional scanning tool uses generational mean spawner abundan
 
 ## AGGREGATE ABUNDANCE-BASED LRPS{#aggAbundMethods}
 
-Aggregate abundance-based LRPs represent the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs (the same % as used for proportion-based LRPs) will be above a single selected benchmark, which is a proxy for above the red zone in our case study applications. This definition requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt et al. in review).
+Aggregate abundance-based LRPs represent the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs (the same % as used for proportion-based LRPs) will be above a single selected benchmark, which is a proxy for above the red zone in our case study applications. <!--CH: should we mention here that, "The Rapid Multidimensional Scanner Tool was considered in preliminary analyses for aggregate-abundance based LRPs but dismissed for computational reasons, see below."?-->This definition requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt et al. in review).
  
-We consider two types of aggregate abundance-based LRPs in our case studies: Logistic regression-based LRPs and Projection-based LRPs. Logistic regression LRPs are estimated using historical data, and thus represent conditions that have been previously experienced by a SMU. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, and thus, allow uncertainty in future processes to be accounted for through alternative scenarios.  
+We consider two types of aggregate abundance-based LRPs in our case studies: Logistic regression-based LRPs and Projection-based LRPs. Logistic regression LRPs are estimated using historical data, and thus represent conditions that have been previously experienced by a SMU. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, and thus, allow uncertainty in future processes to be accounted for through alternative scenarios. <!--CH suggestion to add next sentence-->. Thus projection-based LRPs overcomes one key short-coming of the logistic-regression based LRP that historical conditions might not represent current (or future) conditions, by allowing the user to specify model structure and parameter estimates and their uncertainties that reflect the best-available science on current (or future) dynamics.
 
-Within both the logistic regression- and projection-based LRP estimation routines, we characterize annual CU status using raw annual spawner abundances. This approach is based on preliminary analyses that showed  using raw spawner abundances improved the spread in the data used to establish a relationship between CU status and aggregate spawning abundance. Furthermore, using generational means in the logistic regression-based approach led to considerable auto-correlation in the aggregate abundance time series, which is a direct violation of the logistic regression assumptions. We therefore used raw annual spawner abundances within the estimation routines, but used generational averages of aggregate spawner abundances when assessing SMU-level status relative to the aggregate abundance-based LRPs to reduce noise in annual decisions about whether an LRP had been breached.  The decision to use generational averages of aggregate spawner abundances when determining whether an LRP is breached is consistent with the approach used for proportion-based LRPs. In both cases, the underlying metric being used to determine SMU status (either aggregate abundance or CU-level status of component CUs for the proportion-based approach) is based on generational-averaged values in order to reduce annual fluctuations in decisions about about whether an SMU has dropped below its LRP. 
+Within both the logistic regression- and projection-based LRP estimation routines, <!--CH suggestion: I think we should first mention that we're using a single metric instead of the multidimensional approach, and then describe how we're using raw annual spawner abundances. This is consistent for both logistic regression and projection-based methods, so can be mentioned here, though admittedly the reasons do differ. I've moved some text up the the next section-->we characterize annual CU status using a single metric, spawner abundances relative to benchmarks instead of using the Rapid Multidimensional Scanner Tool as in the proportion-based LRPs. While in theory, estimates of CU status used in the aggregate-abundance based methods could be derived from the rapid multidimensional scanning tool, we found little evidence of a statistical relationship between between multidimensional CU status and aggregate spawner abundance for the one case study we considered this approach for: Interior Fraser Coho. In addition, projection-based LRPs are derived from an equilibrium model that does not incorporate temporal dynamics required for assessment of trends in the Rapid Multidimensional Scanner Tool. As a result, we rely on status estimated from a single lower benchmark metric (e.g., $S_{gen}$) rather than the multidimensional scanner tool to develop aggregate-abundance based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper. 
 
-<!-- KH question: Does the above paragraph read ok?? Or, is it too confusing to follow? -->
+In addition, we characterize annual CU status using raw annual spawner abundances instead of generational averages. This approach is based on preliminary analyses that showed using raw spawner abundances improved the spread in the data used to establish a relationship between CU status and aggregate spawning abundance. Furthermore, using generational means in the logistic regression-based approach led to considerable autocorrelation in the aggregate abundance time series, violating assumptions of the logistic regression. We therefore used raw annual spawner abundances within the estimation routines for aggregate-abundance based LRPs. However, we used generational averages of aggregate spawner abundances when assessing SMU-level status relative to the aggregate abundance-based LRPs to reduce noise in annual decisions about whether an LRP had been breached related to variability in cohorts within a generation.  The decision to use generational averages of aggregate spawner abundances when determining whether an LRP is breached is consistent with the approach used for proportion-based LRPs. In both cases, the underlying metric being used to determine SMU status (either aggregate abundance or CU-level status of component CUs for the proportion-based approach) is based on generational-averaged values in order to reduce annual fluctuations in status related to independent cohorts within a generation. 
+
+<!-- KH question: Does the above paragraph read ok?? Or, is it too confusing to follow? 
+CH: I think it's as clear as it can be. A made a few edits to it, specifically including the idea of smoothing over independent cohorts within a generation.-->
 
 
 ### Logistic regression-based LRPs{#logisticMethods}
 
-Logistic regression-based LRPs (also called Logistic regression LRPs) are derived from an empirically estimated relationship between CU-level status and aggregate SMU abundance. Using this approach, the LRP represents the aggregate abundance level that has historically been associated with a given probability of 100% of CUs having status above 'poor'. While in theory, estimates of CU status used in the logistic regression could come from the rapid multidimensional scanning tool, we found little evidence of a statistical relationship between between multidimensional CU status and aggregate spawner abundance for the one case study we considered this approach for: Interior Fraser Coho. As a result, we rely on status estimated from a single lower benchmark metric (e.g., $S_{gen}$) rather than the multidimensional scanner tool to develop logistic-regression-based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper.  
+Logistic regression-based LRPs (also called Logistic regression LRPs) are derived from an empirically estimated relationship between CU-level status and aggregate SMU abundance. Using this approach, the LRP represents the aggregate abundance level that has historically been associated with a given probability of 100% of CUs having status above 'poor'. <!--CH: I moved this text to the paragraph above: "While in theory, estimates of CU status used in the logistic regression could come from the rapid multidimensional scanning tool, we found little evidence of a statistical relationship between between multidimensional CU status and aggregate spawner abundance for the one case study we considered this approach for: Interior Fraser Coho. As a result, we rely on status estimated from a single lower benchmark metric (e.g., $S_{gen}$) rather than the multidimensional scanner tool to develop logistic-regression-based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper."  -->
 
 <!-- KH question: does this above mention of the multi-dimensional approach paired with logistic regression work at this point in the method -->
 
@@ -101,7 +102,7 @@ where, $p$ is probability, $B_0$ and $B_1$ are estimated logistic regression par
   (\#eq:logisticLRP)
 \end{equation}
 
-Annual spawner abundances at both the CU and SMU level for this analysis are on the raw scale (i.e., no generational averaging applied). An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit). We show the estimation of LRPs based on this fit for four possible probability thresholds: $p^*$ = 0.5, 0.66, 0.90, and 0.99. For each $p^*$ level, LRP estimates represent the aggregate abundance that is associated with that probability of all CUs having status greater than their LBM. Logistic regression models were fit using TMB (citation), with resulting LRP estimates from equation \@ref(eq:logisticLRP) calculated within the code. Uncertainty in LRP estimates were quantified based on a 95% confidence interval on the MLE estimate.  
+Annual spawner abundances at both the CU and SMU level for this analysis are on the raw scale (i.e., no generational averaging applied). An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit). We show the estimation of LRPs based on this fit for four possible probability thresholds: $p^*$ = 0.5, 0.66, 0.90, and 0.99. For each $p^*$ level, LRP estimates represent the aggregate abundance that is associated with that probability of all CUs having status greater than their LBM. Logistic regression models were fit using TMB (citation), with resulting LRP estimates from equation \@ref(eq:logisticLRP) calculated within the code. Uncertainty in LRP estimates were quantified based on a 95% confidence interval on the maximum likelihood estimate, MLE.  
 
 ```{r example-logisticFit, fig.cap="Logistic regression fit to annual Bernoulli data to predict the probability of all CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance. Each black dot represent a year in the observed time series as a Bernoulli indicator showing whether the requirement of all CUs above their LBM was met (success = 1) or not (failure = 0) as a function of aggregate spawning abundance to the SMU. The black solid line in the maximum likelihood model fit to indicator data, and the grey shaded region shows the the 95-percent confidence interval around the fit model. Coloured lines demonstrate how aggregate abundance LRPs are calculated for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all CUs > LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
@@ -109,10 +110,12 @@ knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 
 We initially considered an alternative approach to logistic regression in which the LRP represents the aggregate abundance that has historically been associated with a pre-specified proportion of CUs being above their lower benchmark. Using this approach, CU-level status was quantified as the number or CUs with status > LBM for each year of observed data.  A logistic regression was then fit to predict the proportion of CUs with status > LBM as a function of aggregate spawner abundance to the SMU (i.e., abundance from nCUs combined). We do not show present this method for our case studies however due to inherent limitations when the required proportion of CUs above their lower benchmarks is 100%. Equation \@ref(eq:logisticLRP) cannot be solved directly for a threshold proportion of $p^*$ = 100%, and LRP estimates were highly sensitive to the choice of $p^*$ value used as a proxy. Using $p^*$ = 99% vs. $p^*$ = 99.9% vs. $p^*$ = 99.99% gave very different LRP estimates. 
 
+<!--CH: I suggest we add a sentence or two about  how we used TMB (with reference to [@kristensen_tmb_2016]) to estimate parameters, because this platform allowed us to implement a statistically integrated approach-->
 
 ##### Logistic Regression Model Diagnostics
 
-There are several assumptions associated with logistic regression, of which four that are relevant for our application to LRPs are listed below. Model diagnostics were applied to evaluate the extent to which those assumptions were met, as well as statistical significance of model coefficients, goodness-of-fit, and classification accuracy of LRPs developed from the logistic regression. All analyses were implemented using R v.4.0.4 unless otherwise specified [@rcoreteamLanguageEnvironmentStatistical2021].  The three assumptions are as follows:
+There are several assumptions associated with logistic regression, of which four that are relevant for our application to LRPs are listed below. Model diagnostics were applied to evaluate the extent to which those assumptions were met, as well as statistical significance of model coefficients, goodness-of-fit, and classification accuracy of LRPs developed from the logistic regression. <!-- CH remove?: All analyses were implemented using R v.4.0.4 unless otherwise specified [@rcoreteamLanguageEnvironmentStatistical2021]. --> 
+<!--CH: perhaps we should leave the reference to R version (i.e. previous sentence) out because we each are using different versions of R, and each section is lead by a different PI, so different R version which is more confusing than helpful.-->  The three assumptions are as follows:
 
 1. The relationship between aggregate abundance and log-odds (the logarithm of the odds of all CUs being above their lower benchmark) is linear.
 
@@ -163,7 +166,7 @@ The magnitude of lag-1 autocorrelation was then estimated among deviance residua
 
 **Evaluating outliers (Assumption 3)**
 
-We recommend identifying influential outliers using leverage statistics where possible. For our case studies, we identified outliers independent of their influence because the software used to estimate model parameters (TMB) does not provide the hat-matrix required to assess influence of individual points.  Instead, we focused on identifying outliers based on the general rule of thumb that deviance residuals greater than 2 are considered to be to be outliers because 95\% of the distribution is expected to be within 2 standard deviations of the mean. Further work to identify influential outliers is recommended when other statistical model fitting tools are used. 
+We recommend identifying influential outliers using leverage statistics where possible. For our case studies, we identified outliers independent of their influence because the software used to estimate model parameters (TMB) does not provide the hat-matrix required to assess influence of individual points. Instead, we focused on identifying outliers based on the general rule of thumb that deviance residuals greater than 2 are considered to be to be outliers because 95\% of the distribution is expected to be within 2 standard deviations of the mean. Further work to identify influential outliers is recommended when other statistical model fitting tools are used. 
 
 
 **Statistical significance of model coefficients**
@@ -173,9 +176,9 @@ Statistical significance of coefficients was evaluated using the Wald test stati
 
 **Goodness-of-fit**
 
-The goodness-of-fit was evaluated by comparing the ratio of residual deviance to null deviance (similar to a likelihood ratio). This ratio is assumed to follow a Chi-square distribution with 1 degree of freedom, where 1 degree of freedom is based on the difference in the number of parameters between full and null models. P-values <0.05 indicate significant lack of fit [@foxAppliedRegressionAnalysis2016].
+The goodness-of-fit was evaluated by comparing the ratio of residual deviance to null deviance (similar to a likelihood ratio). This ratio is assumed to follow a Chi-square distribution with 1 degree of freedom derived from the difference in the number of parameters between full and null models (1). P-values <0.05 indicate significant lack of fit [@foxAppliedRegressionAnalysis2016].
 
-In addition, the psuedo-$R^2$ was calculated to indicate the ratio of the model fit to the null model without an independent variable, 
+In addition, the pseudo-$R^2$ was calculated to indicate the ratio of the model fit to the null model without an independent variable, 
 
 \begin{equation}
    psuedo-R^2 =  1- \frac{\sum_{t}^{t=nYears} d} {\sum_{t}^{t=nYears} d_0} 
@@ -188,7 +191,7 @@ where $d_0$ are the deviance residuals for the null model. The psuedo-$R^2$ is a
 Dobson AJ and Barnett AG (2008) An Introduction to Generalized Linear Models. Third Edition. Chapman & Hall/CRC Press. 
 -->
 
-In addition, the length of available time-series will impact power to detect significant model coefficients, and coefficient estimates may be biased when time-series are short.  @peduzziSimulationStudyNumber1996 recommend a minimum of 10 data points for the least frequent outcome to avoid biases in model coefficients, based on simulation study of epidemiological data. For example, if the frequency of outcomes were 0.5 and 0.5 (for 0 and 1, respectively), then a sample size of at least 10/0.5 = 20 would be sufficient, and this minimum sample size would be higher if the data were skewed, e.g., if frequency of outcomes were 0.7 and 0.3, the minimum sample size would be 10/0.3 = 33. A similar evaluation of sample sizes to minimize biases logistic-regression based LRPs for fisheries applications is warranted. Although it is possible to estimate LRPs with lower sample sizes, the risks of biases in model parameters (and LRPs) increases.
+In addition, the length of available time-series will impact power to detect significant model coefficients, and coefficient estimates may be biased when time-series are short.  @peduzziSimulationStudyNumber1996 recommend a minimum of 10 data points for the least frequent outcome to avoid biases in model coefficients, based on simulation study of epidemiological data. For example, if the frequency of outcomes were 0.5 and 0.5 (for 0 and 1, respectively), then a sample size of at least 10/0.5 = 20 would be sufficient, and this minimum sample size would be higher if the data were skewed, e.g., if frequency of outcomes were 0.7 and 0.3, the minimum sample size would be 10/0.3 = 33. <!-- CH I wrote this next sentence, but am not actually sure it's true so am hesitant about including: "That study was based on epidemiological analyses which typically permit only very low type 1 errors."-->A similar evaluation of sample sizes to minimize biases logistic-regression based LRPs for fisheries applications is warranted. Although it is possible to estimate LRPs with lower sample sizes, the risks of biases in model parameters (and LRPs) increases.
 
 **Classification accuracy of LRPs**
 
