CH finished comments on case study paper ch2

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -200,15 +200,17 @@ Classification accuracy was evaluated based on the ratio of successful classific
 
 ### PROJECTION-BASED LRPS{#projectedMethods}
 
-The projection-based LRP approach combines all the information known for individual CUs within an SMU and then uses that information to project abundance trends into the future. Projection-based LRPs are then estimated using projected future CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. $S_{gen}$) at a given level of exploitation. This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect lack of biological or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric rather than the multidimensional scanner tool to develop LRPs using projections. Future extensions of this approach may want to consider applying the multidimensional scanner tool within forward projections to classify CU status. 
+The projection-based LRP approach combines information on population dynamics of individual CUs within an SMU and then uses that information to project abundances into the future. Projection-based LRPs are then estimated using projected future CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. $S_{gen}$) at equilibrium given a specified level of exploitation. Specifically, projections are run until the distribution of abundances stabilize for each CU. <!--CH should we expand on this, or does this make sense?--> This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect lack of biological or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric rather than the multidimensional scanner tool to develop LRPs using projections. <!--CH I suggest removing this next sentence, as the LRP would be exactly specific to the current abundances, the time-period for the projections, as well as exploitation rates in the projection. It seems odd to have a different LRP depending on current abundances and time-frame. If projections are run from current abundances for along period, then long-term trend will be relatively flat, affecting that part of the multidimensional status. If projections are run for only a few generations, the long-term trend would be steep depending on current abundance and ER. --> <!--Future extensions of this approach may want to consider applying the multidimensional scanner tool within forward projections to classify CU status. -->
 
 We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix  \@ref(app:samsim-appendix), while model code is available on GitHub at: https://github.com/Pacific-salmon-assess/samSim/tree/LRP.  
 
 Detailed descriptions of the parameterization of samSim for our two case study applications of abundance-based projected LRPs (Interior Fraser Coho and WCVI Chinook) are presented in Chapters 3 and 4, respectively. In both cases, we incorporated uncertainty into projected CU dynamics through the specification of empirically-derived probability distributions for key biological and management parameters, including stock-recruitment parameters, proportion of recruits at age, and exploitation rates (ER). Larger structural uncertainties in model formulation were represented through the use of sensitivity analyses and/or alternative operating models (OMs). Observation error was not included in projections because derivation of LRPs was based on projected 'true' abundance levels rather than observed abundance. 
 
-The following steps were taken to calculate projected LRPs using samSim:
+The following steps were taken to calculate projection-based LRPs:
 
-   1. Use samSim to project spawner abundances forward for $nYears$ over $nTrial$ stochastic simulations.
+   1. Use samSim to project spawner abundances forward for $nYears$ over $nTrial$ stochastic simulations, under a specified exploitation rate.
+   
+   <!--CH: I added "under a specified exploitation rate" to match the text in the 1st pgh of this subsection. I wonder if future projection-based LRPs could include other types of MPs that more accurately match current management approach, if it deviates from a constant ER? Does that make sense?-->
 
 
    2. For each simulated year-trial combination, characterize abundances as follows:
@@ -229,7 +231,7 @@ The following steps were taken to calculate projected LRPs using samSim:
    Pr(All CUs > LBM) = \frac{Number of success in SAgg_{bin}} {Number of realizations in SAgg_{bin}}
    (\#eq:projBins)
 \end{equation}
-For example, if 125 of the 500 realizations that fell within the $SAgg_{bin}$ of 10,000 - 10,200 fish were 'successes', there would be a 25% probability (125 / 500 = 0.25) that all CUs would be above their lower benchmarks when aggregate abundances are between 10,000 and 1,200 fish.
+For example, if 125 of the 500 realizations that fell within the $SAgg_{bin}$ of 10,000 - 10,200 fish were 'successes', there would be a 25% probability (125 / 500 = 0.25) that all CUs would be above their lower benchmarks when aggregate abundances are between 10,000 and 10,200 fish.
 
    4. Identify the LRP as the mid-point of the aggregate abundance bin, $AggS_{bin}$, that is closest to the required probability threshold that all CUs are above their LBMs.
 
