--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -194,6 +194,7 @@ knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus-Ricker-Cap.png")
 ```
 
 As a point of comparison, if a proportion-based LRP was based on all CUs being above the IFCRT distributional target, the LRP would have been breached in 4 of the 21 years between 2000 and 2020. Eight of the 11 sub-populations had generational average escapement drop below the 1000 spawner threshold in one or more years (Figure \@ref(fig:coho-Subpop-timeseries)). Sub-populations tended to differ in which years they dropped below the 1000 spawner threshold, which meant that the distributional target at least half of the subpopulations within each CU with greater than 1000 fish was more often met than not. All 11 subpopulations had generational average spawning abundances above 1000 spawners in 2020, indicating that the stock would be well above a proportion-based LRP based on the IFCRT-distributional target (Figure \@ref(fig:coho-Subpop-timeseries)).
+<!--CH: i wonder if this plot of 11 subpops could be grouped into the 5 CUs, to more easily show the years when half of the subpops within each CU were < orange horiz line. It's hard to see visually how only 4 years have a breach of the LRP based on this plot-->
 
 ```{r coho-Subpop-timeseries, fig.cap="Escapement time series for 11 subpopulations of Interior Fraser Coho shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Gray dots shows years in which the 3-year geometric mean escapement was above the 1000 fish threshold used to assess distributional status, while red dots show years in which the 1000 fish threshold was not met.  CUs to which each subpopulation belong to are shown in Table 1.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
@@ -214,7 +215,9 @@ When estimating logistic regression LRPs using $S_{gen}$, we used an integrated 
 (ii)	A logistic regression model fit to aggregated data to estimate the LRP as the aggregate abundance that has historically been associated with a specified probability of all CUs being above Sgen (Equations \@ref(eq:logistic) - \@ref(eq:logisticLRP))
 
 
-We initially considered a third version of the logistic regression model, in which we used the rapid multidimensional scanning tool to characterize CU status. Preliminary model evaluations led us to exclude this model due to poor fit. There were two factors limiting the establishment of a statistical relationship between multidimensional estimates of CU status and aggregate spawner abundance.  First, the rapid multidimensional scanning tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks, while our logistic regression approach uses raw (unsmoothed) aggregate abundance as a predictor variable. As a result, when logistic regressions were fit to CU status estimates from the multidimensional tool, there was a mismatch in the timing of abundance highs and lows. This mismatch lead to a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean of aggregate abundance as the predictor variable in the logistical regression fit instead of raw, annual abundance values introduced considerable auto-correlation in statuses. Future explorations of aggregate abundance logistic regression-based LRPs based on the rapid multidimensional scanning tool could account for the auto-correlation by including an AR(1) covariance structure. However, longer time-series and a wider spread of the data would be required to compensate for the additional parameter in the model. The second limiting factor in establishing a statistical relationship between rapid multidimensional estimates of CU status and aggregate spawner abundance is that the rapid multidimensional scanning tool includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the rapid multidimensional scanning tool includes absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs, because small CUs will be more likely to be below the absolute threshold despite high aggregate abundances.
+We initially considered a third version of the logistic regression model, in which we used the rapid multidimensional scanning tool to characterize CU status. Preliminary model evaluations led us to exclude this model due to poor fit. There were two factors limiting the establishment of a statistical relationship between multidimensional estimates of CU status and aggregate spawner abundance.  First, the rapid multidimensional scanning tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks, while our logistic regression approach uses raw (unsmoothed) aggregate abundance as a predictor variable. As a result, when logistic regressions were fit to CU status estimates from the multidimensional tool, there was a mismatch in the timing of abundance highs and lows.<!--CH: suggestion to focus entirely on weaker or non-existent relationship due to autocorrelation instead of the mixmatch. The mixmatch doesn't really matter for logsitic regression (and, a priori it's not immediately clear which one would be better, smoothed or unsmoothed), but the non-existent relationship does matter-->. This mismatch lead to a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean of aggregate abundance as the predictor variable in the logistical regression fit instead of raw, annual abundance values introduced considerable autocorrelation in statuses. Future explorations of aggregate abundance logistic regression-based LRPs based on the rapid multidimensional scanning tool could account for the autocorrelation by including an AR(1) covariance structure. However, longer time-series and a wider spread of the data would be required to compensate for the additional parameter in the model. 
+
+The second limiting factor in establishing a statistical relationship between rapid multidimensional estimates of CU status and aggregate spawner abundance is that the rapid multidimensional scanning tool includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the rapid multidimensional scanning tool includes absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs, because small CUs will be more likely to be below the absolute threshold despite high aggregate abundances.
 
 
 ***Retrospective Analysis***
@@ -251,7 +254,7 @@ When the Logistic:Sgen-Ricker model was used, aggregate abundance-based LRPs ran
 knitr::include_graphics("figure/coho-IMCap2020-LogisticLRP.png")
 ```
 
-When CU status was based on the IFCRT distributional target, the fit logistic curve was more gradual than the two Sgen models due to a greater overlap in 'successful' (all CUs > distributional target) and 'unsuccessful' (<100% of CUs above distributional target) years at low to moderate aggregate abundances.  In 3 of the 6 years with aggregate abundances below 20,000 spawners, the distributional target was not met for all CUs (Figure \@ref(fig:coho-Distr-logisticFit2020)). As a result, LRPs based on the IFCRT distributional target were more uncertain than those based on $S_{gen}$. LRPs based on this model also became increasingly large at high probability thresholds (Table \@ref(tab:logisticLRPs2020). The LRP based on a 99% probability was 44,403 spawners, with a 95% confidence interval extending from 15,102 - 73,703 spawners.  
+When CU status was based on the IFCRT distributional target, the fit of the logistic curve was more gradual than the two Sgen models due to a greater overlap in 'successful' (all CUs > distributional target) and 'unsuccessful' (<100% of CUs above distributional target) years at low to moderate aggregate abundances.  In 3 of the 6 years with aggregate abundances below 20,000 spawners, the distributional target was not met for all CUs (Figure \@ref(fig:coho-Distr-logisticFit2020)). As a result, LRPs based on the IFCRT distributional target were more uncertain than those based on $S_{gen}$. LRPs based on this model also became increasingly large at high probability thresholds (Table \@ref(tab:logisticLRPs2020). The LRP based on a 99% probability was 44,403 spawners, with a 95% confidence interval extending from 15,102 - 73,703 spawners.  
 
 ```{r coho-Distr-logisticFit2020, fig.cap="Logistic regression fit from the Logistic:IFCRT LRP model using data from 1998 - 2020. See Figure 9 caption for additional details.", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
 knitr::include_graphics("figure/coho-ThreshAb2020-LogisticLRP.png")
@@ -278,7 +281,12 @@ Table: (\#tab:logisticLRPs2020) Aggregate abundance based LRPs (with 95% confide
 
 ***Logistic Regression Diagnostics***
 
-Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models(Table @ref(tab:logisticDiagIFC2020)). Assumptions of linearity and lack of large outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption. An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2. Observations were independent at all year lags examined for the Logistic:Sgen-priorCap and Logistic-IFCRT models. For the Logistic:Sgen-Ricker model, observations were independent at 1 and 2-year lags and marginally significant at a  3-year lag suggesting generational-scale trends (Figure @ref(fig:coho-logisticACF-IM)). The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker model which had a hit ratio of 0.95 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
+Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models(Table @ref(tab:logisticDiagIFC2020)). Assumptions of linearity and lack of large outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption. 
+
+An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2. Observations were independent at all year lags examined for the Logistic:Sgen-priorCap and Logistic-IFCRT models. For the Logistic:Sgen-Ricker model, observations were independent at 1 and 2-year lags and marginally significant at a  3-year lag suggesting generational-scale trends (Figure @ref(fig:coho-logisticACF-IM)). 
+
+The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker model which had a hit ratio of 0.95 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
+<!--CH: this table and above text does not appear correctly on the knitted  pdf version. I'm not sure why. Also, I broke up the 1 pgh above into a few smaller ones; feel free to revise-->
 
 +-------------------------+--------------+-------------------+-----------------+
 | Diagnostic Test         | Sgen-Ricker  | Sgen-priorCap     | IFCRT
